# agent-diva-nano

./: Cargo.toml  README.md
examples/: chat.rs  tui.rs.original
examples/gateway.original/: handlers.rs  manager.rs  mcp_service.rs  runtime.rs  server.rs  skill_service.rs  state.rs
examples/tui/: app.rs  commands.rs  config.rs  main.rs  manager.rs  provider.rs  ui.rs  wizard.rs
memory/: MEMORY_SNAPSHOT.md  brain.db
memory/diary/rational/: 2026-04-21.md
sessions/: nano_default.jsonl
src/: agent.rs  chat.rs  config.rs  error.rs  lib.rs  nano_loop.rs  tool_assembly.rs
src/internal/: context.rs  mod.rs  provider.rs
