[package]
name = "agent-diva-nano"
version = "0.4.10"
edition = "2021"
authors = ["mastwet (projectViVY Team, undefine foundation)"]
license = "MIT"
repository = "https://github.com/ProjectViVy/agent-diva"
description = "Minimal 'create an agent' library for Agent Diva"
rust-version = "1.80.0"

[workspace]

[features]
default = ["files"]
files = ["agent-diva-files"]

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# Agent Diva internal crates
agent-diva-core = { version = "0.4.9", path = "../../agent-diva-core" }
agent-diva-agent = { version = "0.4.9", path = "../../agent-diva-agent" }
agent-diva-providers = { version = "0.4.9", path = "../../agent-diva-providers" }
agent-diva-tools = { version = "0.4.9", path = "../../agent-diva-tools" }
agent-diva-tooling = { version = "0.4.9", path = "../../agent-diva-tooling" }
agent-diva-files = { version = "0.4.9", path = "../../agent-diva-files", optional = true }

[dev-dependencies]
tempfile = "3.10"
ratatui = "0.28"
crossterm = "0.28"
chrono = "0.4"

[[example]]
name = "chat"
path = "examples/chat.rs"

[[example]]
name = "tui"
path = "examples/tui/main.rs"
